--- a/puctesis_refs.bib
+++ b/puctesis_refs.bib
@@ -514,3 +514,106 @@
 	year = {2010}
 }
 
+@article{Noftle2007,
+	abstract = {The authors examined relations between the Big Five personality traits and academic outcomes, specifically SAT scores and grade-point average (GPA). Openness was the strongest predictor of SAT verbal scores, and Conscientiousness was the strongest predictor of both high school and college GPA. These relations replicated across 4 independent samples and across 4 different personality inventories. Further analyses showed that Conscientiousness predicted college GPA, even after controlling for high school GPA and SAT scores, and that the relation between Conscientiousness and college GPA was mediated, both concurrently and longitudinally, by increased academic effort and higher levels of perceived academic ability. The relation between Openness and SAT verbal scores was independent of academic achievement and was mediated, both concurrently and longitudinally, by perceived verbal intelligence. Together, these findings show that personality traits have independent and incremental effects on academic outcomes, even after controlling for traditional predictors of those outcomes. ((c) 2007 APA, all rights reserved).},
+	author = {Noftle, Erik E and Robins, Richard W},
+	doi = {10.1037/0022-3514.93.1.116},
+	isbn = {0022-3514},
+	issn = {1939-1315},
+	journal = {Journal of Personality and Social Psychology},
+	keywords = {1981,1991,1996,achievement,and work,barrick,benet-,conscientiousness,de,digman,gpa,mount,on success in school,openness to experience,ozer,personality has important influences,raad,sat scores,schouwenburg,takemoto-chock},
+	mendeley-groups = {Personality},
+	number = {1},
+	pages = {116--130},
+	pmid = {17605593},
+	title = {{Personality predictors of academic outcomes: Big five correlates of GPA and SAT scores.}},
+	url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/0022-3514.93.1.116},
+	volume = {93},
+	year = {2007}
+}
+@article{o2007big,
+	title={Big Five personality predictors of post-secondary academic performance},
+	author={OConnor, Melissa C and Paunonen, Sampo V},
+	journal={Personality and Individual differences},
+	volume={43},
+	number={5},
+	pages={971--990},
+	year={2007},
+	publisher={Elsevier}
+}
+@article{de1996personality,
+	title={Personality and interests as predictors of educational streaming and achievement},
+	author={De Fruyt, Filip and Mervielde, Ivan},
+	journal={European journal of personality},
+	volume={10},
+	number={5},
+	pages={405--425},
+	year={1996},
+	publisher={Wiley Online Library}
+}
+@article{Shiner2002,
+	abstract = {Does childhood personality foreshadow later adaptation in the key developmental task domains of academic achievement, work, rule-abiding conduct, friendships, and romantic relationships? In this article we present a synopsis of recent findings from the Project Competence longitudinal study of 205 children who were assessed around ages 10, 20, and 30. Childhood personality differences predicted adaptation at all three time periods and also changes in adaptation over time. On the other hand, features of adult personality were presaged by childhood adaptation, and in some cases childhood adaptation predicted the course of personality development. To understand better the transactional processes that shape and link personality and adaptive success over the life course, longitudinal designs and more dynamic models of personality development will be needed. ?? 2002 Elsevier Science (USA). All rights reserved.},
+	author = {Shiner, Rebecca L. and Masten, Ann S.},
+	doi = {10.1016/S0092-6566(02)00508-1},
+	file = {:C$\backslash$:/Users/Rob/Google Drive/Memoria/Documentos/Papers/Personality/Transactional links between personality and adaptation from childhood thorugh adulthood.pdf:pdf},
+	isbn = {0092-6566},
+	issn = {00926566},
+	journal = {Journal of Research in Personality},
+	keywords = {Competence,Life outcomes,Personality development},
+	mendeley-groups = {Personality},
+	number = {6},
+	pages = {580--588},
+	title = {{Transactional links between personality and adaptation from childhood through adulthood}},
+	volume = {36},
+	year = {2002}
+}
+@article{Gerber2011,
+	abstract = {Recent political science research on the effects of core personality traits—the Big Five—contributes to our understanding of how peo- ple interact with their political environments. This research examines how individual-level variations in broad, stable psychological charac- teristics affect individual-level political outcomes. In this article, we review recent work that uses the Big Five to predict political attitudes and behavior.We also replicate some of these analyses using new data to examine the possibility that prior findings stemfromsampling error or unique political contexts. Finally,we discuss several of the challenges faced by scholars who are currently pursuing or are interested in pur- suing this line of inquiry. These challenges include refining theoretical explanations of how the Big Five shape political outcomes, addressing important measurement concerns, and resolving inconsistencies across studies.},
+	author = {Gerber, Alan S. and Huber, Gregory a. and Doherty, David and Dowling, Conor M.},
+	doi = {10.1146/annurev-polisci-051010-111659},
+	file = {:C$\backslash$:/Users/Rob/Google Drive/Memoria/Documentos/Papers/Personality/Gerber, 2011, the big five personality traits in the political arena.pdf:pdf},
+	isbn = {9780824333140},
+	issn = {1094-2939},
+	journal = {Annual Review of Political Science},
+	keywords = {dispositional traits,five-factor model,participation,political,political behavior,psychology},
+	mendeley-groups = {Personality},
+	number = {1},
+	pages = {265--287},
+	title = {{The Big Five Personality Traits in the Political Arena}},
+	volume = {14},
+	year = {2011}
+}
+@article{Carney2008,
+	abstract = {Although skeptics continue to doubt that most people are “ideological,” evidence suggests that meaningful left-right differences do exist and that they may be rooted in basic personality dispositions, that is, relatively stable individual differences in psychological needs, motives, and orientations toward the world. Seventy-five years of theory and research on personality and political orientation has produced a long list of dispositions, traits, and behaviors. Applying a theory of ideology as motivated social cognition and a “Big Five” framework, we find that two traits, Openness to New Experiences and Conscientiousness, parsimoniously capture many of the ways in which individual differences underlying political orientation have been conceptualized. In three studies we investigate the relationship between personality and political orientation using multiple domains and measurement techniques, including: self-reported personality assessment; nonverbal behavior in the context of social interaction; and personal possessions and the characteristics of living and working spaces. We obtained consistent and converging evidence that personality differences between liberals and conservatives are robust, replicable, and behaviorally significant, especially with respect to social (vs. economic) dimensions of ideology. In general, liberals are more open-minded, creative, curious, and novelty seeking, whereas conservatives are more orderly, conventional, and better organized.},
+	author = {Carney, Dana R. and Jost, John T. and Gosling, Samuel D. and Potter, Jeff},
+	doi = {10.1111/j.1467-9221.2008.00668.x},
+	file = {:C$\backslash$:/Users/Rob/Google Drive/Memoria/Documentos/Papers/Personality/secret lives.pdf:pdf},
+	isbn = {1467-9221},
+	issn = {0162895X},
+	journal = {Political Psychology},
+	keywords = {Conscientiousness,Conservatism,Ideology,Liberalism,Nonverbal behavior,Openness,Personality,Political orientation},
+	mendeley-groups = {Personality},
+	number = {6},
+	pages = {807--840},
+	pmid = {260337900001},
+	title = {{The secret lives of liberals and conservatives: Personality profiles, interaction styles, and the things they leave behind}},
+	volume = {29},
+	year = {2008}
+}
+@article{Gerber2010,
+	abstract = {Previous research on personality traits and political attitudes has largely focused on the direct relationships between traits and ideological self-placement. There are theoretical reasons, however, to suspect that the relationships between personality traits and political attitudes (1) vary across issue domains and (2) depend on contextual factors that affect the meaning of political stimuli. In this study, we provide an explicit theoretical framework for formulating hypotheses about these differential effects. We then leverage the power of an unusually large national survey of registered voters to examine how the relationships between Big Five personality traits and political attitudes differ across issue domains and social contexts (as defined by racial groups). We confirm some important previous findings regarding personality and political ideology, find clear evidence that Big Five traits affect economic and social attitudes differently, show that the effect of Big Five traits is often as large as that of education or income in predicting ideology, and demonstrate that the relationships between Big Five traits and ideology vary substantially between white and black respondents.},
+	author = {Gerber, Alan S. and Huber, Gregory a. and Doherty, David and Dowling, Conor M. and Ha, Shang E.},
+	doi = {10.1017/S0003055410000031},
+	file = {:C$\backslash$:/Users/Rob/Google Drive/Memoria/Documentos/Papers/Personality/political attitudes.pdf:pdf},
+	isbn = {0003-0554},
+	issn = {0003-0554},
+	journal = {American Political Science Review},
+	mendeley-groups = {Personality},
+	number = {01},
+	pages = {111},
+	title = {{Personality and Political Attitudes: Relationships across Issue Domains and Political Contexts}},
+	url = {http://journals.cambridge.org/action/displayFulltext?type=6{\&}fid=7449476{\&}jid=PSR{\&}volumeId=104{\&}issueId=01{\&}aid=7449472{\&}bodyId={\&}membershipNumber={\&}societyETOCSession={\&}fulltextType=RA{\&}fileId=S0003055410000031{\#}rfh1},
+	volume = {104},
+	year = {2010}
+}
+
